Instal chart js

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "chart.js": "^4.3.0",
     "daisyui": "^2.51.6",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
@@ -21,6 +22,7 @@
     "mongodb": "^5.4.0",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
