Preparing for deploy on cyclic

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build",
-    "start": "next start",
+    "build": "node server.js",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
