--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint-config-next": "13.3.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "is-arrayish": "^0.3.2",
     "mongodb": "^5.4.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "simple-swizzle": "^0.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
