--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build && node server.js",
+    "build": "next build",
     "export": "next export",
     "start": "node server.js",
     "lint": "next lint"
